[package]
name = "netipc-rust-bench-driver"
version = "0.1.0"
edition = "2021"

[features]
windows-driver = []

[dependencies]
libc = "0.2"
netipc = { path = "../../../src/crates/netipc" }

[[bin]]
name = "netipc_live_uds_rs"
path = "netipc_live_uds_rs.rs"

[[bin]]
name = "netipc_live_win_rs"
path = "netipc_live_win_rs.rs"
required-features = ["windows-driver"]
