[package]
name = "netipc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "interop_codec"
path = "src/bin/interop_codec.rs"

[[bin]]
name = "interop_uds"
path = "../../../tests/fixtures/rust/src/bin/interop_uds.rs"
