[package]
name = "netipc-test-rust-fixtures"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libc = "0.2"
netipc = { path = "../../../src/crates/netipc" }

[[bin]]
name = "netipc-codec-rs"
path = "src/bin/netipc_codec_rs.rs"

[[bin]]
name = "netipc_live_rs"
path = "src/bin/netipc_live_rs.rs"
